<?xml version="1.0"?>
<package format="3">
  <name>launch_pkg</name>
  <version>0.0.0</version>
  <description>Main launch package for integrated_ws</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>control_pkg</exec_depend>
  <exec_depend>hardware_pkg</exec_depend>
  <exec_depend>vision_pkg</exec_depend>
  <exec_depend>vision_assembly_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>